--- a/index.html
+++ b/index.html
@@ -1,2 +1,2 @@
 <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Pariatur earum, deleniti maiores illo sit, commodi sint vel in vitae voluptate quas, ut exercitationem reprehenderit tempora. Aliquid esse illo possimus quae.</p>
-<div>love is lust</div>
+<div>love is lust <button>button</button></div>
